@@ -1,0 +1,55 @@
+package mcjty.lostcities.commands;
+
+import com.mojang.brigadier.Command;
+import com.mojang.brigadier.CommandDispatcher;
+import com.mojang.brigadier.builder.ArgumentBuilder;
+import com.mojang.brigadier.context.CommandContext;
+import com.mojang.brigadier.exceptions.CommandSyntaxException;
+import mcjty.lostcities.editor.EditModeData;
+import mcjty.lostcities.setup.Registration;
+import mcjty.lostcities.varia.ChunkCoord;
+import mcjty.lostcities.varia.ComponentFactory;
+import mcjty.lostcities.worldgen.IDimensionInfo;
+import net.minecraft.commands.CommandSourceStack;
+import net.minecraft.commands.Commands;
+import net.minecraft.core.BlockPos;
+import net.minecraft.server.level.ServerLevel;
+import net.minecraft.server.level.ServerPlayer;
+import net.minecraft.world.level.ChunkPos;
+
+import java.util.List;
+
+public class CommandListParts implements Command<CommandSourceStack> {
+
+    private static final CommandListParts CMD = new CommandListParts();
+
+    public static ArgumentBuilder<CommandSourceStack, ?> register(CommandDispatcher<CommandSourceStack> dispatcher) {
+        return Commands.literal("listparts")
+                .requires(cs -> cs.hasPermission(1)).executes(CMD);
+    }
+
+
+    @Override
+    public int run(CommandContext<CommandSourceStack> context) throws CommandSyntaxException {
+        ServerPlayer player = context.getSource().getPlayerOrException();
+        BlockPos start = player.blockPosition();
+
+        ServerLevel level = player.getLevel();
+        IDimensionInfo dimInfo = Registration.LOSTCITY_FEATURE.getDimensionInfo(level);
+        if (dimInfo == null) {
+            context.getSource().sendFailure(ComponentFactory.literal("This dimension doesn't support Lost Cities!"));
+            return 0;
+        }
+        if (!dimInfo.getProfile().EDITMODE) {
+            context.getSource().sendFailure(ComponentFactory.literal("This world was not created with edit mode enabled. This command is not possible!"));
+            return 0;
+        }
+
+        ChunkPos cp = new ChunkPos(start);
+        List<EditModeData.PartData> data = EditModeData.getData().getPartData(new ChunkCoord(level.dimension(), cp.x, cp.z));
+        for (EditModeData.PartData pd : data) {
+            context.getSource().sendSuccess(ComponentFactory.literal("Found '" + pd.partName() + "' at " + pd.y()), false);
+        }
+        return 0;
+    }
+}
